--- a/ui/web_content/kml_editor/kml_editor.html
+++ b/ui/web_content/kml_editor/kml_editor.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>KML Editor</title>
-    <link rel="stylesheet" href="../../../assets/js_libs/openlayers/ol.css">
-    <link rel="stylesheet" href="kml_editor_styles.css">
+    <link rel="stylesheet" href="../../../assets/js_libs/openlayers/ol.css" type="text/css">
+    <link rel="stylesheet" href="kml_editor_styles.css" type="text/css">
     <style>
         html, body {
             height: 100%;
@@ -13,6 +14,16 @@
         #map {
             width: 100%;
             height: 100%;
+        }
+        /* Override OpenLayers control button styles */
+        .ol-control button {
+            font-family: 'Arial', sans-serif !important;
+            font-size: 1.2em !important;
+            background-color: rgba(255, 255, 255, 0.8) !important;
+            color: #333 !important;
+        }
+        .ol-control button:hover {
+            background-color: rgba(255, 255, 255, 0.9) !important;
         }
     </style>
 </head>
